Add .NET Aspire Orchestration

--- a/PuddleBot/PuddleBot.csproj
+++ b/PuddleBot/PuddleBot.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PuddleBot.ServiceDefaults\PuddleBot.ServiceDefaults.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
